# SphWaterSimulation

./: CMakeLists.txt  README.md
SphWaterSimulation/: constants.h  kernels.cc  kernels.h  main.cc  mat3.h  particle.h  rigid_body.h  rigidbody.h  sph.cc  sph.h  vec3.h
scripts/: construct_surface.py  convert.sh  gen_5_frame_pngs.py  gen_mesh.py  gen_mesh.sh  gen_video.sh  install_utilities.sh  rename.py  shade_smooth.py
